# SkillsTaxonomyPipe

./: .gitignore  Pipfile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
config/: config.cfg  config_gpu.cfg
data/annotation/: .gitignore  annotation-result-BIO.txt.dvc  annotation-result-orig.json.dvc  annotation-result-orig.txt.dvc  annotation-result-val.json.dvc  annotation-result-val.txt.dvc  annotation-result.json.dvc  annotation-result.txt.dvc
data/corpus/: .gitignore
data/corpus/jobs/: .gitignore  test.txt.dvc  valid.txt.dvc
data/jobs/: .gitignore  seek_vacancies.db.dvc
data/skills_coocurrance/: .gitignore  indeed_resumes.csv.dvc  seek_vacancies.csv.dvc
models/: .gitignore  jobs_lm_backward.dvc  jobs_lm_forward.dvc
src/jobprocessing/: augmentation_main.py  entity_dto.py  flair_skills_extraction_service.py  seek_db_model.py  skills_aug_pipeline.py  text_preparateion_service.py  utils.py
src/ner/: convert_bliou_to_bio.py
src/ner/flair/: prepare_lm_train_files.py  train_language_model.py  train_ner.py  train_ner_with_lang_model.py
src/ner/spacy/: prepare_traning_data.py
src/skills_coocurance/: mf_exploration.ipynb
