[tool.poetry]
name = "skillstaxonomypipe"
version = "0.3.0"
description = "Skills taxonomy extraction pipeline"
authors = ["Pavel Pozdnyak <pozdpl@gmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.9"
flair = "^0.11.3"
PyYAML = "^6.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.37"
jupyterlab = "^3.4.3"
pandas = "^1.4.2"
dfply = "^0.3.3"
torch-tb-profiler = "^0.4.0"
tensorboard = "^2.9.1"
spacy = {extras = ["cuda116"], version = "^3.3.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
